--- a/index.html
+++ b/index.html
@@ -211,21 +211,21 @@
 
 <div class="reg">
     <h2>Регистрирай се </h2>
-    <input type="email" name="email" placeholder="Enter Email Here">
-    <input type="password" name="" placeholder="Enter Password Here">
-    <button class="btn"> <a href="#">Login</a></button>
+    <input type="email" name="email" placeholder="Въведете имейл">
+    <input type="password" name="" placeholder="Въведете парола">
+    <button class="btn"> <a href="#">Вход</a></button>
 
-    <a href="#">Sigh up here</a>
+    <a href="#">Регистрация</a>
 
 
 </div>
 
 <div class="contact-form">
     <form class="form" action="contactform.php" method="post">
-        <input type="text" name="name" placeholder="Full name">
-        <input type="text" name="mail" placeholder="Your e-mail">
-        <textarea name="message" placeholder="Message"></textarea>
-        <button type="submit" name="submit">SEND MAIL</button>
+        <input type="text" name="name" placeholder="Име">
+        <input type="text" name="mail" placeholder="Имейл">
+        <textarea name="message" placeholder="Съобщение"></textarea>
+        <button type="submit" name="submit">Изпрати</button>
     </form>
 </div>
 
