--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <div class="container">
     <nav>
         <ul>
-          <li><a href="#" onclick="reloadPage()">НАЧАЛО</a></li>
-            <li><a href="#" onclick="showAbout(about)">ЗА НАС</a></li>
+          <li><a href="#НАЧАЛО" onclick="reloadPage()">НАЧАЛО</a></li>
+            <li><a href="#ЗА НАС" onclick="showAbout(about)">ЗА НАС</a></li>
             <li>
                 КУРСОВЕ
                 <ul class="dropdown-menu">
-                    <li><a href="#" onclick="showCategory('категория-а1')">Категория А1</a></li>
-                    <li><a href="#" onclick="showCategory('категория-а2')">Категория А2</a></li>
-                    <li><a href="#" onclick="showCategory('категория-а')">Категория А</a></li>
-                    <li><a href="#" onclick="showCategory('категория-в')">Категория В</a></li>
-                    <li><a href="#" onclick="showCategory('категория-с')">Категория С</a></li>
-                    <li><a href="#" onclick="showCategory('категория-се')">Категория СЕ</a></li>
-                    <li><a href="#" onclick="showCategory('категория-д')">Категория Д</a></li>
+                    <li><a href="#КУРСОВЕ/КатегорияА1" onclick="showCategory('категория-а1')">Категория А1</a></li>
+                    <li><a href="#КУРСОВЕ/КатегорияА2" onclick="showCategory('категория-а2')">Категория А2</a></li>
+                    <li><a href="#КУРСОВЕ/КатегорияА" onclick="showCategory('категория-а')">Категория А</a></li>
+                    <li><a href="#КУРСОВЕ/КатегорияВ" onclick="showCategory('категория-в')">Категория В</a></li>
+                    <li><a href="#КУРСОВЕ/КатегорияС" onclick="showCategory('категория-с')">Категория С</a></li>
+                    <li><a href="#Курсове/КатегорияСЕ" onclick="showCategory('категория-се')">Категория СЕ</a></li>
+                    <li><a href="#Курсове/КатегорияД" onclick="showCategory('категория-д')">Категория Д</a></li>
                 </ul>
             </li>
             <li><a href="https://avtoizpit.com">ЛИСТОВКИ</a></li>
-            <li><a href="#" onclick="showMap()">КАРТА</a></li>
+            <li><a href="#КАРТА" onclick="showMap()">КАРТА</a></li>
 
 
         </ul>
