--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 </div>
 <div id="map" class="map-section">
     <h1>АВТОШКОЛА <br><span>УМНИ КОРМИЛА</span><br></h1>
-    <h3>
-        Може да ни намерите на адрес гр.Варна,бул.Левски 11
-
-    </h3>
+   <h1><span>
+        Може да ни намерите на адрес гр.Варна,бул.Левски 11.<br>
+        Телефон:+359 889/879635<br>
+        E-mail:  umnikormila@abv.bg
+    </span> </h1>
+        <img src="map.png" alt=" " class="map">
 </div>
 
 
