--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <li>Изпит: Вътрешен и държавен изпит по теория;<br>
             Вътрешен и държавен изпит по практика.</li>
         <li>Учебен мотоциклет:YAMAHA YBR125</li>
+        <img src="yamaha.jpg" alt="  " class="A">
 </ul>
     </p>
 
@@ -103,6 +104,7 @@
         <li>Изпит: 	Вътрешни и държавни изпити по теория и практика (4бр.)
             *при придобита кат."В", "А1" - вътрешен и държавен изпит по практика</li>
         <li> Учебен мотоциклет: 	HONDA CB500F</li>
+         <img src="honda.jpg" alt=" " class="A">
 
     </ul>
     </p>
@@ -122,6 +124,7 @@
         <li>Обучение: 	Обучението включва 20 учебни часа практика</li>
         <li>Изпит: 	С придобита кат."В" – вътрешен и държавен изпит по практика</li>
         <li>Учебен мотоциклет:KAWASAKI ER- 6N</li>
+         <img src="kawasakii.jpg" alt=" " class="A">
     </ul>
     </p>
 </div>
