--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <ul>
         <li> Копие на лична карта</li>
         <li>Копие на диплома за завършено основно образование<br>
-            За завършилите основно образование след 26.09.2017г. - копие от свидетелство <br>за завършен 10-ти клас или диплом за средно образование</li>
+            За завършилите основно образование след 26.09.2017г. - копие от свидетелство за <br> завършен 10-ти клас или диплом за средно образование</li>
 
         <li>Паспортна снимка – 2 бр</li>
         <li> Изисквания:Кандидатът да има навършени 15 години и 11 месеца</li>
@@ -95,14 +95,14 @@
     <ul>
 
         <li>Копие на лична карта, шофьорска книжка и контролен талон</li>
-        <li>Копие на свидетелство за основно образование(ако е преди 26.09.2017г) или копие на диплом за средно образование
+        <li>Копие на свидетелство за основно образование(ако е преди 26.09.2017г) или копие<br> на диплом за средно образование
         <li>Паспортна снимка – 2 бр.</li>
         <li>Изисквания: 	Кандидатът да има навършени 18 години</li>
         <li>Обучение: 	Без придобита категория - 40 часа теория и 20 практика</li>
         С придобита кат."В" - само практика.
         С придобита кат. "А1" - 7 часа практика</li>
         <li>Изпит: 	Вътрешни и държавни изпити по теория и практика (4бр.)
-            *при придобита кат."В", "А1" - вътрешен и държавен изпит по практика</li>
+            *при придобита кат."В", <br>"А1" - вътрешен и държавен изпит по практика</li>
         <li> Учебен мотоциклет: 	HONDA CB500F</li>
          <img src="honda.jpg" alt=" " class="A">
 
@@ -117,9 +117,9 @@
         Необходими документи за записване:
     <ul>
         <li> Копие на лична карта,  шофьорска книжка и контролен талон</li>
-        <li>Копие на свидетелство за завършено основно образование(ако е преди 2017г) или копие на диплом за средно образование</li>
+        <li>Копие на свидетелство за завършено основно образование(ако е преди 2017г)<br> или копие на диплом за средно образование</li>
         <li>Паспортна снимка – 2 бр</li>
-        <li>Изисквания: Кандидата да има навършени 24 години или 2 години стаж от А2 при навършени 20 години.
+        <li>Изисквания: Кандидата да има навършени 24 години или 2 години стаж от А2<br> при навършени 20 години.
             Завършено минимум основно образование</li>
         <li>Обучение: 	Обучението включва 20 учебни часа практика</li>
         <li>Изпит: 	С придобита кат."В" – вътрешен и държавен изпит по практика</li>
