--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
             31 учебни часа по практика</li>
         <li>Изпит: 	Вътрешни и държавни изпити по теория и практика</li>
         <li>Учебни автомобили: 	VW Golf V, Toyota Yaris, Peugeot 206(AUTOMATIC)</li>
+         <img src="toyota.jpg" alt=" " class="B">
+        <img src="golf.jpg" alt=" " class="B">
+        <img src="peugeot.jpg" alt=" " class="B">
     </ul>
     </p>
 </div>
@@ -151,18 +154,19 @@
     <p>
     <h1>АВТОШКОЛА <br><span>УМНИ КОРМИЛА</span><br></h1>
         <b>Kатегория C</b><br>
-        Автомобили, различни от категория "D", чиято допустима максимална маса надвишава 3500 кг; към тях може да се прикачва ремарке с допустима максимална маса не повече от 750 кг<br>
+        Автомобили, различни от категория "D", чиято допустима максимална маса надвишава 3500 кг;<br> към тях може да се прикачва ремарке с допустима максимална маса не повече от 750 кг<br>
         Необходими документи за записване:
     <ul>
         <li>Копие на лична карта, шофьорска книжка и контролен талон</li>
-        <li>Копие на свидетелство за завършено основно образование(ако е преди 26.09.2017г) или копие на диплом за средно образование</li>
+        <li>Копие на свидетелство за завършено основно образование(ако е преди 26.09.2017г) <br>или копие на диплом за средно образование</li>
         <li>Паспортна снимка – 2 бр</li>
         <li>Удостоверение за психологическа годност (за записване)</li>
         <li>Изисквания: 	Кандидата да има навършени 18 години, да притежава кат. "В"</li>
         <li>Обучение: 	14 учебни часа теория<br>
             20 учебни часа практика</li>
         <li>Изпит: 	Вътрешни и държавни изпити по теория и практика</li>
-        <li>Учебен автомобил: 	Mercedes 1722</li>
+        <li>Учебен автомобил: 	Mercedes Atego</li>
+         <img src="mercedes.jpg" alt=" " class="C">
     </ul>
     </p>
 </div>
@@ -170,16 +174,17 @@
     <p>
     <h1>АВТОШКОЛА <br><span>УМНИ КОРМИЛА</span><br></h1>
         <b>Kатегория CE</b><br>
-        Състав от пътни превозни средства с теглещо моторно превозно средство от категория "С" и ремарке с допустима максимална маса над 750 кг<br>
+        Състав от пътни превозни средства с теглещо моторно превозно средство от категория "С" <br>и ремарке с допустима максимална маса над 750 кг<br>
         Необходими документи за записване:
     <ul>
         <li>Копие на лична карта, копие на шоф. книжка и контролен талон</li>
-        <li>Оригинал и копие на свидетелство за основно образование(ако е преди 26.09.2017г) или диплом за средно образование</li>
+        <li>Оригинал и копие на свидетелство за основно образование(ако е преди 26.09.2017г) <br>или диплом за средно образование</li>
         <li>Паспортна снимка – 2 бр</li>
-        <li> Изисквания: 	Кандидата трябва да притежава кат. "С" със стаж 1 година, (считано от датата на талона) и да има навършени 21 години</li>
+        <li> Изисквания: 	Кандидата трябва да притежава кат. "С" със стаж 1 година,<br> (считано от датата на талона) и да има навършени 21 години</li>
         <li>Обучение: 	4 учебни  часа теория и 16 учебни часа по практика</li>
-        <li>Изпит: 	Вътрени и държавни изпити по теория и практика – управление на автомобил с ремарке на учебна площадка и по пътища в населено място</li>
-        <li>Учебен автомобил: 	Mercedes 1722 + ремарке</li>
+        <li>Изпит: 	Вътрени и държавни изпити по теория и практика – управление на автомобил <br>с ремарке на учебна площадка и по пътища в населено място</li>
+        <li>Учебен автомобил: 	Mercedes Atego + ремарке</li>
+         <img src="mercedes.jpg" alt=" " class="C">
     </ul>
     </p>
 </div>
@@ -187,19 +192,20 @@
     <p>
     <h1>АВТОШКОЛА <br><span>УМНИ КОРМИЛА</span><br></h1>
         <b>Kатегория D</b><br>
-        Автомобили, с изключение на тролейбусите, предназначени за превоз на пътници, с над 8 места за сядане, без мястото на водача<br>
+        Автомобили, с изключение на тролейбусите, предназначени за превоз на пътници, с над 8 места<br> за сядане, без мястото на водача<br>
 
         Необходими документи за записване:
 
     <ul>
         <li>Копие на лична карта, шоф. книжка, контролен талон</li>
-        <li>Оригинал и копие на свидетелство за основно образование(ако е преди 26.09.2017г) или диплома за средно образование</li>
+        <li>Оригинал и копие на свидетелство за основно образование(ако е преди 26.09.2017г) или<br> диплома за средно образование</li>
         <li> Паспортна снимка – 2 бр</li>
         <li>Удостоверение за психологическа годност (за записване)</li>
         <li> Изисквания: 	Кандидатът да има навършени 21 год., да притежава кат. С, стаж минимум 2 год</li>
         <li> Обучение: 	6 часа теория и 16 практически часа</li>
         <li>Изпит: 	Полагане на вътрешен изпит и държавен изпит по теория</li>
         <li>Практика – управление на автомобил по пътища в населено място</li>
+        <img src="setra.jpg" alt=" " class="C">
     </ul>
     </p>
 
