--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
     <form class="form" action="contactform.php" method="post">
         <input type="text" name="name" placeholder="Име">
         <input type="text" name="mail" placeholder="Имейл">
+        <input type="text" name="subject" placeholder="Относно">
         <textarea name="message" placeholder="Съобщение"></textarea>
         <button type="submit" name="submit">Изпрати</button>
     </form>
